@@ -5,13 +5,11 @@ import lombok.Getter;
 
 import jakarta.persistence.Transient;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 
 import static java.util.EnumSet.of;
 
@@ -28,19 +26,19 @@ public enum TurnEvent implements Event {
     STAND("stand"),
 
     // generic,
-    NEXT("next"), // only for bot player
-    PASS("pass"),
-    LEAVE("leave"),
+    BOT("next"), // only for bot player
+    PASS("pass"), // give round to next player
+    LEAVE("leave"), // leave as a invited player - rest can continue
 
     // technical internal events
     ERROR("error"),
     DETERMINE_WINNER("determine_winner"),
     END_GAME("end_game"),; // system events
 
-    public static final List<TurnEvent> blackJackPossibleHumanTurn = Arrays.asList(DEAL, SPLIT, LEAVE);
-    public static final List<TurnEvent> blackJackPossibleBotTurn = List.of(NEXT);
-    public static final List<TurnEvent> highLowPossibleHumanTurns = Arrays.asList(HIGHER, LOWER, PASS, LEAVE);
-    public static final List<TurnEvent> highLowPossibleBotTurns = List.of(NEXT);
+    public static final List<TurnEvent> blackJackPossibleHumanTurn = Arrays.asList(DEAL, SPLIT);
+    public static final List<TurnEvent> blackJackPossibleBotTurn = List.of(BOT);
+    public static final List<TurnEvent> highLowPossibleHumanTurns = Arrays.asList(HIGHER, LOWER, PASS);
+    public static final List<TurnEvent> highLowPossibleBotTurns = List.of(BOT);
     public static final List<TurnEvent> systemTurn = Arrays.asList(DETERMINE_WINNER, END_GAME);
 
     public static final Map<String, TurnEvent> lookup
